[package]
authors = ["Connie Hilarides <conni_h@outlook.com>"]
name = "windows_dpi"
version = "0.1.0"
repository = "https://github.com/Connicpu/windows_dpi"
documentation = "https://docs.rs/windows_dpi/*/x86_64-pc-windows-msvc/windows_dpi"
description = """
Provides an API for marking a process as DPI-aware on windows systems. Works for
Windows 7+, using the newer API when available. Also provides a method for getting
the DPI appropriate for an HWND.
"""

[dependencies]
gdi32-sys = "0.2.0"
lazy_static = "0.2.8"
libloading = "0.4.0"
user32-sys = "0.2.0"
winapi = "0.2.8"
