[package]
authors = ["Connie Hilarides <conni_h@outlook.com>"]
description = """
Provides an API for marking a process as DPI-aware on windows systems. Works for
Windows 7+, using the newer API when available. Also provides a method for getting
the DPI appropriate for an HWND.

Methods are currently stubs for other platforms, if anybody would like to contribute
to support other platforms I'm happy to help!
"""
documentation = "https://docs.rs/windows_dpi/"
license = "MIT"
name = "windows_dpi"
repository = "https://github.com/Connicpu/windows_dpi"
version = "0.3.0"

[dependencies]
lazy_static = "1.0"
libc = "0.2.29"

[target.'cfg(target_os = "windows")'.dependencies]
libloading = "0.5"
winapi = { version = "0.3.4", features = ["minwindef", "windef", "winerror", "wingdi", "winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.2"
cocoa = "0.14"
